# discord-tag-watcher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example_config.json  pyproject.toml  setup.py
data/: example_config.json
discord_music_tracker/: __init__.py  main.py
discord_music_tracker/cogs/: soundcloud.py
discord_music_tracker/utils/: database.py  soundcloud.py
discord_tag_watcher/: __main__.py  config.py
