[tool.poetry]
name = "discord-tag-watcher"
version = "1.0.0"
description = "SoundCloud tag watching via Discord webhooks"
authors = ["7x11x13 <x7x11x13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
soundcloud-v2 = "^1.4.2"
discord-webhook = "^1.3.1"
dill = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
